// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<span
  class="rmd-badge rmd-badge--greyscale"
>
  3
</span>
`;

exports[`Badge should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<span
  class="rmd-badge rmd-badge--greyscale custom-class-name"
  style="color: white;"
>
  3
</span>
`;

exports[`Badge should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<span
  class="rmd-badge rmd-background-container rmd-primary-container"
  style=""
>
  3
</span>
`;

exports[`Badge should apply the correct styling, HTML attributes, and allow a ref 4`] = `
<span
  class="rmd-badge rmd-background-container rmd-secondary-container"
  style=""
>
  3
</span>
`;

exports[`Badge should apply the correct styling, HTML attributes, and allow a ref 5`] = `
<span
  class="rmd-badge rmd-badge--greyscale"
  style=""
>
  3
</span>
`;

exports[`Badge should apply the correct styling, HTML attributes, and allow a ref 6`] = `
<span
  class="rmd-badge"
  style=""
>
  3
</span>
`;
